Style header icons and text

--- a/index.html
+++ b/index.html
@@ -4,41 +4,34 @@
   <title>Static Comp 3</title>
   <link rel="stylesheet" type="text/css" href="normalize.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
   <main class="container">
     <aside class="sidebar">
-      
     </aside>
-
     <section class="main-content">
-
       <nav class="top-nav">
-        <button class="user-menu btn"><i class="fas fa-bars"></i></button>
+        <button class="user-menu btn"><i class="fas fa-bars large"></i></button>
         <input class="top-search" type="text" name="search">
-        <button class="add-friend btn"><i class="fas fa-user-plus"></i></button>
-        <button class="calendar btn"><i class="far fa-calendar-plus"></i></button>
-        <button class="settings-menu btn"><i class="fas fa-th"></i></button>
+        <button class="add-friend btn"><i class="fas fa-user-plus large"></i></button>
+        <button class="calendar btn"><i class="far fa-calendar-plus large"></i></button>
+        <button class="settings-menu btn"><i class="fas fa-th large"></i></button>
       </nav>
-
       <header class="header">
-
-        <section class="job-title">
-          <div>
-          <h1>Customer Service Rep</h1>
-          <h4>San Francisco, CA ∙ <span class="preview">Preview this post</span></h4>
+        <section class="job-title-section">
+          <div class="job-title">
+          <h1>Customer Service Representative</h1>
+          <h4><i class="fas fa-map-marker-alt"></i>San Francisco, CA ∙ <span class="preview">Preview this post</span></h4>
           </div>
-          <div>
-          <button class="graph-btn">OPEN</button>
-          <button class="graph-btn"></button>
-          <button class="graph-btn"></button>
-          <button class="graph-btn"></button>
-          </div>
-            
+          <div class="job-title-buttons">
+          <button class="graph-btn"><i class="fas fa-circle"></i>OPEN</button>
+          <button class="graph-btn circle-btn"><i class="fas fa-bookmark"></i></button>
+          <button class="graph-btn circle-btn"><i class="fas fa-pencil-alt"></i></button>
+          <button class="graph-btn circle-btn"><i class="fas fa-trash-alt"></i></button>
+          </div>  
         </section>
-
         <ul class="job-nav">
           <li>SUMMARY</li>
           <li>APPLICANTS</li>
@@ -49,11 +42,6 @@
           <li>NOTIFICATIONS</li>
         </ul>
       </header>
-
-
-
-
-
       <section class="main-inside">
         <section class="top-section">
           <article class="graph-section">
