Add hovers to buttons in main content

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           </div>
           <div class="job-title-buttons">
           <button class="graph-btn"><i class="fas fa-circle"></i>OPEN</button>
-          <button class="graph-btn circle-btn"><i class="fas fa-bookmark"></i></button>
-          <button class="graph-btn circle-btn"><i class="fas fa-pencil-alt"></i></button>
-          <button class="graph-btn circle-btn"><i class="fas fa-trash-alt"></i></button>
+          <button class="graph-btn circle-btn"><i class="fas fa-bookmark w"></i></button>
+          <button class="graph-btn circle-btn"><i class="fas fa-pencil-alt w"></i></button>
+          <button class="graph-btn circle-btn"><i class="fas fa-trash-alt w"></i></button>
           </div>  
         </section>
         <ul class="job-nav">
