Fix side divider styles

--- a/index.html
+++ b/index.html
@@ -132,14 +132,20 @@
               <article>
                 <h3><i class="fas fa-globe-americas"></i>Link to this Job</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a</p>
-                <input class="text-field input" type="text" name="text"><input class="copy-btn" type="button" name="copy" value="Copy">
-                <hr class="social-hr">
+                <div class="input-add-on">
+                  <input class="text-field input" type="text" name="text">
+                  <input class="copy-btn" type="button" name="copy" value="Copy">
+                </div>
+                <hr noshade class="social-hr">
               </article>
               <article>
                 <h3><i class="fas fa-calculator"></i>Use the Button Widget</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt n</p>
-                <input class="text-field input" type="text" name="text"><input class="copy-btn"  type="button" name="copy" value="Copy">
-                <hr class="social-hr">
+                <div class="input-add-on">
+                  <input class="text-field input" type="text" name="text">
+                  <input class="copy-btn" type="button" name="copy" value="Copy">
+                </div>
+                <hr noshade class="social-hr">
               </article>
               <article>
                <h3><i class="fas fa-paper-plane"></i>Upload Resumes by Email</h3>
