Add sidebar table text and icons

--- a/index.html
+++ b/index.html
@@ -9,58 +9,61 @@
 </head>
 <body>
   <main class="container">
-    <aside class="sidebar">
-      <table>
-        <tr>
-          <th>Main</th>
-        </tr>
-        <tr>
-          <td><i class="fas fa-home"></i></td>
-          <td>HOME</td>
-        </tr>
-        <tr>
-          <td><i class="fas fa-briefcase"></i></td>
-          <td>JOBS</td>
-        </tr>
-        <tr>
-          <td><i class="fas fa-file-invoice"></i></td>
-          <td>RESUME</td>
-        </tr>
-        <tr>
-          <td><i class="far fa-clipboard"></i></td>
-          <td>TASKS</td>
-        </tr>
-        <tr>
-          <td><i class="far fa-calendar-alt"></i></td>
-          <td>CALENDAR</td>
-        </tr>
-      </table>
+    <aside class="sidebar" role="sidebar-navigation">
+      <section class=''>
+        <p class="dot">●</p>
+        <h4>Newton Bradley</h4>
+      </section>
+      <nav class="side-nav-container border-outset">
+          <p>Main</p>
+      <ul>
+        <li class="side-nav">
+          <i class="fas fa-home fa-fw"></i><a href="#">HOME</a>
+        </li>
+        <li class="side-nav">
+          <i class="fas fa-briefcase fa-fw"></i><a href="#">JOBS</a>
+        </li>
+        <li class="side-nav">
+          <i class="fas fa-file-invoice fa-fw"></i><a href="#">RESUMES</a>
+        </li>
+        <li class="side-nav">
+          <i class="far fa-clipboard fa-fw"></i><a href="#">TASKS</a>
+        </li>
+        <li class="side-nav">
+          <i class="far fa-calendar-alt fa-fw"></i><a href="#">CALENDAR</a>
+        </li>   
+      </ul>   
+      </nav>
+      <nav class="side-nav-container border-outset">
+      <p>Admin</p>
+        <ul>
+          <li class="side-nav">
+            <i class="fas fa-user-friends fa-fw"></i><a href="#">USERS</a>
+          </li>
+          <li class="side-nav">
+            <i class="fas fa-map-marker-alt fa-fw"></i><a href="#">JOBS</a>
+          </li>
+          <li class="side-nav">
+            <i class="fas fa-people-carry fa-fw"></i><a href="#">RESUMES</a>
+          </li>
+          <li class="side-nav">
+            <i class="fas fa-book fa-fw"></i><a href="#">TASKS</a></li>
+          <li class="side-nav">
+            <i class="fas fa-share-alt fa-fw"></i><a href="#">CALENDAR</a>
+          </li> 
+        </ul>
+      </nav>
+        <nav class="side-nav-container border-outset">
+          <ul>
+            <li>helo </li>
+            <li>hi</li>
+            <li>hi</li>
+          </ul>
+        </nav>  
 
-      <table>
-        <tr>
-          <th>Admin</th>
-        </tr>
-        <tr>
-          <td><i class="fas fa-user-friends"></i></td>
-          <td>USERS</td>
-        </tr>
-        <tr>
-          <td><i class="fas fa-map-marker-alt"></i></td>
-          <td>LOCATIONS</td>
-        </tr>
-        <tr>
-          <td><i class="fas fa-people-carry"></i></td>
-          <td>WORKFLOWS</td>
-        </tr>
-        <tr>
-          <td><i class="fas fa-book"></i></td>
-          <td>JOB BOARDS</td>
-        </tr>
-        <tr>
-          <td><i class="fas fa-share-alt"></i></td>
-          <td>SOCIAL</td>
-        </tr>
-      </table>
+
+    
+     
 
 
     </aside>
@@ -86,13 +89,13 @@
           </div>  
         </section>
         <ul class="job-nav">
-          <li>SUMMARY</li>
-          <li>APPLICANTS</li>
-          <li>JOB BOARD</li>
-          <li>INTERVIEWS</li>
-          <li>ACTIVITY</li>
-          <li>BROADCAST</li>
-          <li>NOTIFICATIONS</li>
+          <li class="li-bottom-border">SUMMARY</li>
+          <li class="li-bottom-border">APPLICANTS</li>
+          <li class="li-bottom-border">JOB BOARD</li>
+          <li class="li-bottom-border">INTERVIEWS</li>
+          <li class="li-bottom-border">ACTIVITY</li>
+          <li class="li-bottom-border">BROADCAST</li>
+          <li class="li-bottom-border">NOTIFICATIONS</li>
         </ul>
       </header>
       <section class="main-inside">
