Add and style job posting section

--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
               <h4 class="job-text">JOB DESCRIPTION</h4>
               <button class="edit-btn"><i class="fas fa-pencil-alt edit-icon"></i>EDIT</button>
             </header>
-            <section class="job-body">
-              <h5 class="job-item">POSITION TITLE</h5>
+            <section class="job-container">
+              <section class="job-body">            
+              <h5 class="job-item">POSITION TITLE</h5>         
               <h3 class="job-item">Customer Service Rep</h3>
               <h5 class="job-item">LOCATION</h5>
               <h3 class="job-item">San Francisco, CA</h3>
@@ -185,12 +186,14 @@
               <h5 class="job-item">STATUS</h5>
               <h3 class="job-item">Open</h3>
               <h5 class="job-item">DESCRIPTION</h5>
-              <h3 class="job-paragraph job-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a</h3>
-              <H5 class="job-item">HIRING LEAD</H5>
-              <H3 class="job-item">Tom Tizzy</H3>
-              <H5>APPROVED SALARY</H5>
-              <h3>$58,000</h3>       
+              <h3 class="job-paragraph job-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </h3>
+              <h5 class="job-item">HIRING LEAD</h5>
+              <h3 class="job-item">Tom Tizzy</h3>
+              <h5 class="job-item">APPROVED SALARY</h5>
+              <h3 class="job-item">$58,000</h3>       
             </section>
+            </section>
+            
           </article>
           <aside class="social-side">
             <section class="social-box">
