Layout graphs for media query

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </ul>
       </header>
       <section class="main-inside">
-        <section class="top-section">
+        <section class="top-section">     
           <article class="graph-section">
-            <div class="graph-box">
+            <div class="graph-box graph1">
               <div class="single-chart">
                 <svg viewBox="0 0 36 36" class="circular-chart teal">
                   <path class="circle-bg"
@@ -153,14 +153,14 @@
                 </svg>
               </div>
             </div>
-            <div class="graph-box">
+            <div class="graph-box graph2">
               <img class="bar-graph" src="assets/image.png">
             </div>
-          </article>
-          <article class="graph-btn-section">
             <button class="graph-btn">TOTALS - Out of 5,231 views</button>
-            <button class="graph-btn">APPLICANTS/DAY</button>
+            <button class="graph-btn btn-2">APPLICANTS/DAY</button>
           </article>
+
+
           <div class="divider">
             <hr noshade class="center-hr">
             <i class="fas fa-angle-up graph-btn"></i>
