--- a/index.html
+++ b/index.html
@@ -51,21 +51,22 @@
             <i class="fas fa-people-carry fa-fw"></i><a href="#">WORKFLOWS</a>
           </li>
           <li class="side-nav">
-            <i class="fas fa-book fa-fw"></i><a href="#">JOB BOARDS</a></li>
+            <i class="fas fa-book fa-fw"></i><a href="#">JOB BOARDS</a>
+          </li>
           <li class="side-nav">
             <i class="fas fa-share-alt fa-fw"></i><a href="#">SOCIAL</a>
           </li> 
         </ul>
       </nav>
-        <nav class="side-nav-container">
-          <ul>
-            <h5 class="side-heading">Categories</h5>
-            <li class="side-nav nav-sm"><input type="checkbox" class="checkbox administrative red">Administrative</li>
-            <li class="side-nav nav-sm"><input type="checkbox" class="checkbox design">Design</li>
-            <li class="side-nav nav-sm"><input type="checkbox" class="checkbox executive">Executive</li>
-            <li class="side-nav nav-sm"><input type="checkbox" class="checkbox human-resources">Human Resources</li>
-          </ul>
-        </nav>  
+      <nav class="side-nav-container">
+        <ul>
+          <h5 class="side-heading">Categories</h5>
+          <li class="side-nav nav-sm"><input type="checkbox" class="checkbox administrative red">Administrative</li>
+          <li class="side-nav nav-sm"><input type="checkbox" class="checkbox design">Design</li>
+          <li class="side-nav nav-sm"><input type="checkbox" class="checkbox executive">Executive</li>
+          <li class="side-nav nav-sm"><input type="checkbox" class="checkbox human-resources">Human Resources</li>
+        </ul>
+      </nav>  
     </aside>
     <section class="main-content">
       <nav class="top-nav">
@@ -192,9 +193,9 @@
                 <h5 class="job-item">STATUS</h5>
                 <h3 class="job-item">Open</h3>
                 <h5 class="job-item">DESCRIPTION</h5>
-                <h3 class="job-paragraph job-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna </h3>
-                <h5 class="job-item">HIRING LEAD</h5>
-                <h3 class="job-item">Tom Tizzy</h3>
+                <h3 class="job-paragraph job-item">The Customer Service Representative is responsible for interacting with and providing quality assistance to all radical customers, responsible for keeping up-to-date on the various product shizzle helping the bidnessreduce customer service wait times while doing a backhand spring and eating a ham sandwich.</h3>
+                <h5 class="job-item hiring">HIRING LEAD</h5>
+                <h3 class="job-item"><img class="hiring-lead" src="assets/headshot2.jpeg">Tom Tizzy</h3>
                 <h5 class="job-item">APPROVED SALARY</h5>
                 <h3 class="job-item">$58,000</h3>       
               </section>
@@ -209,7 +210,7 @@
             <section class="social-inputs">
               <article class="input1">
                 <h2><i class="fas fa-globe-americas"></i>Link to this Job</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna a</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor labore</p>
                 <div class="input-add-on">
                   <input aria-label="field to copy link to job" class="text-field input" type="text" name="text">
                   <input class="copy-btn" type="button" name="copy" value="Copy">
@@ -218,7 +219,7 @@
               </article>
               <article class="input2">
                 <h2><i class="fas fa-calculator"></i>Use the Button Widget</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt n</p>
+                  <p>The widget embeds the buttons for sharing the job for submitting a resume on your website.</p>
                 <div class="input-add-on">
                   <input class="text-field input" type="text" name="text">
                   <input aria-label="input to embed widget to site" class="copy-btn" type="button" name="copy" value="Copy">
@@ -227,7 +228,7 @@
               </article>
               <article class="input3">
                <h2><i class="fas fa-paper-plane"></i>Upload Resumes by Email</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor quis n</p>
+                  <p>You can automatically upload multiple resumes to this job by emailing the address below.</p>
                 <input aria-label="input field to enter email address" class="text-field-last input" type="text" name="text">
               </article>
             </section>
