Fix job paragraph mess

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <section class="job-container">
               <section class="job-body">            
                 <h5 class="job-item">POSITION TITLE</h5>         
-                <h3 class="job-item">Customer Service Rep</h3>
+                <h3 class="job-item">Customer Service Representative</h3>
                 <h5 class="job-item">LOCATION</h5>
                 <h3 class="job-item">San Francisco, CA</h3>
                 <h5 class="job-item">EMPLOYMENT TYPE</h5>
@@ -192,8 +192,8 @@
                 <h3 class="job-item">Mid-Level</h3>
                 <h5 class="job-item">STATUS</h5>
                 <h3 class="job-item">Open</h3>
-                <h5 class="job-item">DESCRIPTION</h5>
-                <h3 class="job-paragraph job-item">The Customer Service Representative is responsible for interacting with and providing quality assistance to all radical customers, responsible for keeping up-to-date on the various product shizzle helping the bidnessreduce customer service wait times while doing a backhand spring and eating a ham sandwich.</h3>
+                <h5 class="job-item description">DESCRIPTION</h5>
+                <h3 class="job-item job-paragraph">The Customer Service Representative is responsible for interacting with and providing quality assistance to all radical customers, responsible for keeping up-to-date on the various product shizzle helping the bidnessreduce customer service wait times while doing a backhand spring and eating a ham sandwich.</h3>
                 <h5 class="job-item hiring">HIRING LEAD</h5>
                 <h3 class="job-item"><img class="hiring-lead" src="assets/headshot2.jpeg">Tom Tizzy</h3>
                 <h5 class="job-item">APPROVED SALARY</h5>
