Add aria labeling and fix css ordering

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main class="container">
     <aside class="sidebar" role="sidebar-navigation">
       <section class='side-profile'>
-        <img src="assets/headshot.jpg" class="headshot">
+        <img src="assets/headshot.jpg" class="headshot" alt="you profile headshot">
         <div class="side-name">
           <h3 class="name">Newton Barley</h3>
           <i class="fas fa-angle-down"></i>
@@ -163,7 +163,7 @@
               </div>
             </div>
             <div class="graph-box graph2">
-              <img class="bar-graph" src="assets/image.png">
+              <img class="bar-graph" src="assets/image.png" alt="bar graph showing total applicants per day">
             </div>
             <button class="graph-btn">TOTALS - Out of 5,231 views</button>
             <button class="graph-btn btn-2">APPLICANTS/DAY</button>
@@ -195,7 +195,7 @@
                 <h5 class="job-item description">DESCRIPTION</h5>
                 <h3 class="job-item job-paragraph">The Customer Service Representative is responsible for interacting with and providing quality assistance to all radical customers, responsible for keeping up-to-date on the various product shizzle helping the bidnessreduce customer service wait times while doing a backhand spring and eating a ham sandwich.</h3>
                 <h5 class="job-item hiring">HIRING LEAD</h5>
-                <h3 class="job-item"><img class="hiring-lead" src="assets/headshot2.jpeg">Tom Tizzy</h3>
+                <h3 class="job-item"><img class="hiring-lead" src="assets/headshot2.jpeg" alt="Headshot image of a man">Tom Tizzy</h3>
                 <h5 class="job-item">APPROVED SALARY</h5>
                 <h3 class="job-item">$58,000</h3>       
               </section>
@@ -203,9 +203,9 @@
           </article>
           <aside class="social-side">
             <section class="social-box">
-              <button class="social-btn fb-btn"><i class="fab fa-facebook-f fa-fw"></i>Post<span class="hide-social"> to Facebook</span></button>
-              <button class="social-btn tweet-btn"><i class="fab fa-twitter fa-fw"></i>Tweet<span class="hide-social"> this Job</span></button>
-              <button class="social-btn linkedin-btn"><i class="fab fa-linkedin fa-fw"></i>Post<span class="hide-social"> to Linkedin</span></button>
+              <button class="social-btn fb-btn"><i class="fab fa-facebook-f fa-fw" title="facebook"></i>Post<span class="hide-social"> to Facebook</span></button>
+              <button class="social-btn tweet-btn"><i class="fab fa-twitter fa-fw" title="twitter"></i>Tweet<span class="hide-social"> this Job</span></button>
+              <button class="social-btn linkedin-btn"><i class="fab fa-linkedin fa-fw" title="linkedin"></i>Post<span class="hide-social"> to Linkedin</span></button>
             </section>
             <section class="social-inputs">
               <article class="input1">
