Add aria roles and final changes

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
               </section>
             </section>         
           </article>
-          <aside class="social-side">
+          <aside class="social-side" role="social media sidebar">
             <section class="social-box">
               <button class="social-btn fb-btn"><i class="fab fa-facebook-f fa-fw" title="facebook"></i>Post<span class="hide-social"> to Facebook</span></button>
-              <button class="social-btn tweet-btn"><i class="fab fa-twitter fa-fw" title="twitter"></i>Tweet<span class="hide-social"> this Job</span></button>
-              <button class="social-btn linkedin-btn"><i class="fab fa-linkedin fa-fw" title="linkedin"></i>Post<span class="hide-social"> to Linkedin</span></button>
+              <button class="social-btn tweet-btn"><i class="fab fa-twitter fa-fw" title="t"></i>Tweet<span class="hide-social"> this Job</span></button>
+              <button class="social-btn linkedin-btn"><i class="fab fa-linkedin fa-fw"></i>Post<span class="hide-social"> to Linkedin</span></button>
             </section>
             <section class="social-inputs">
               <article class="input1">
@@ -219,7 +219,7 @@
               </article>
               <article class="input2">
                 <h2><i class="fas fa-calculator"></i>Use the Button Widget</h2>
-                  <p>The widget embeds the buttons for sharing the job for submitting a resume on your website.</p>
+                <p>The widget embeds the buttons for sharing the job for submitting a resume on your website.</p>
                 <div class="input-add-on">
                   <input class="text-field input" type="text" name="text">
                   <input aria-label="input to embed widget to site" class="copy-btn" type="button" name="copy" value="Copy">
@@ -227,8 +227,8 @@
                 <hr noshade class="social-hr">
               </article>
               <article class="input3">
-               <h2><i class="fas fa-paper-plane"></i>Upload Resumes by Email</h2>
-                  <p>You can automatically upload multiple resumes to this job by emailing the address below.</p>
+                <h2><i class="fas fa-paper-plane"></i>Upload Resumes by Email</h2>
+                <p>You can automatically upload multiple resumes to this job by emailing the address below.</p>
                 <input aria-label="input field to enter email address" class="text-field-last input" type="text" name="text">
               </article>
             </section>
